# tgbot-py

./: .gitignore  README.md  app.py  login.py  main.py  mysql_tools.py  pyproject.toml  reply_message_exampel.py  requirements.txt  supervisord.conf  update
bot_scripts/: help_me.py  restart.py  setup.py  state.py  trans_123.py  update.py
bot_scripts/scheduler/: auto_fire.py
bot_scripts/universal/: changename_set.py  lottery_set.py  notification_set.py  schedulers.py
bot_scripts/zhuque/: raiding.py  raiding_set.py
config/: config_example.py  reply_message_example.py
filters/: custom_filters.py
libs/: command_tablepy.py  leaderboard_imge.py  log.py  mysql_backup.py  mysql_restore.py  others.py  state.py  sys_info.py  toml.py  transform.py  transform_dispatch.py
libs/leaderboard/: leaderboard_imge.py
models/: __init__.py  alter_tables.py  database.py  redpocket_db_modle.py  transform_db_modle.py  transform_modle.py  ydx_db_modle.py
schedulers/: __init__.py
schedulers/universal/: auto_changename.py
schedulers/zhuque/: fireGenshinCharacterMagic.py
user_scripts/: Plugins_function_summary.py  auto_changename.py  auto_lottery_for_xiaocai.py  jupai.py  movie_monitor_for115.py  zpr.py
user_scripts/audiences/: transform_audiences.py
user_scripts/hddolby/: transform_hddolby.py
user_scripts/ptvicomo/: redpocket.py
user_scripts/redleaves/: redleaves_redpocket.py  transform_redleaves.py
user_scripts/springsunday/: transform_ssd.py
user_scripts/universal/: Plugins_function_summary.py  __init__.py  auto_changename.py  auto_lottery_for_xiaocai.py  xjj.py  (+7 more)
(+9 files in other folders)
