[project]
name = "tgbot_pyro"         # 项目名称
version = "2.1.0"                  # 版本
description = "for " # 描述
authors = [
    { name = "DonneLucky"}
]

dependencies = [
    "kurigram",
    "tgcrypto",
    "APScheduler",
    "aiohttp",
    "jinja2",
    "beautifulsoup4",
    "pytz",
    "uvloop",
    "openai",
    "cryptography",
    "emoji",
    "sqlitedict",
    "Pillow",
    "httpx",
    "bs4",
    "requests",
    "lxml",
    "imgkit",
    "wkhtmltopdf",
    "sqlalchemy",
    "aiosqlite",
    "aiomysql",
    "pypinyin",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
select = ["E", "F"]
line-length = 88
